# vaiko

./: .gitignore  README.md  pyproject.toml
vaiko/: __main__.py  action.py  vaiko.py  window.py  word_dict.py  word_recognizer.py
